--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <div class="answer"></div>
 
         <img class="oldgotcha" src="oldgotcha.png" alt="" />
+        <div class="answer"></div>
       </div>
 
       <div class="question-card">
